--- a/client/src/App.css
+++ b/client/src/App.css
@@ -96,3 +96,13 @@
     background: rgba(0, 0, 0, 0.3);
   }
 }
+
+.box {
+  z-index: 2;
+  position: fixed;
+  top:0;
+  left:10%;
+  background-color:#106497;
+  height:10px;
+  width:10px;
+}
